<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textColor="@color/colorTextPrimary"
        android:layout_below="@+id/toolbar"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="35dp"/>

    <View
        android:id="@+id/h_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorLine"
        android:layout_below="@+id/setting_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"/>

    <Switch
        android:id="@+id/flash_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/h_line"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/flash_title"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"/>

    <Switch
        android:id="@+id/focus_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flash_switch"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/focus_title"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"/>

    <Switch
        android:id="@+id/gpu_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/focus_switch"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/gpu_title"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"/>

    <Switch
        android:id="@+id/voice_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpu_switch"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/voice_title"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"/>

    <Button
        android:id="@+id/saveState"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voice_switch"
        android:text="@string/save_title"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/privacy_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/saveState"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>




</RelativeLayout>