<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/info_background">

    <ImageView
        android:id="@+id/close_info_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_close_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="7dp"
        android:onClick="closeInfoDialog"
        />

    <ImageView
        android:id="@+id/info_app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/info_text1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/info_text1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/info_app_logo"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/info_text2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text1"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/info_text2"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/info_text3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/info_text3"
        android:textSize="15sp"/>

</RelativeLayout>